Added comments, task_schedule, and some headers and footers to the output

--- a/templates/master_schedule.html
+++ b/templates/master_schedule.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD><TITLE>Observing Schedule</TITLE></HEAD>
 <BODY>
+<!--#include virtual="/mta/ASPECT/header.html"-->
 
 
 <H1>Current Cycle</H1>
@@ -64,6 +65,8 @@
 <P>If needed (especially for Cycles 1 and 2), see the <A HREF="https://icxc.harvard.edu/mp/html/schedules.html">SOT MP
 Schedule Page</A>.
 
+<!--#include virtual="/mta/ASPECT/footer.html"--> 
+<!--footer end-->
 
 </BODY>
 </HTML>
