--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,6 +1,8 @@
 <HTML>
 <HEAD></HEAD>
 <BODY>
+<!--#include virtual="/mta/ASPECT/header.html"-->
+
 <TABLE BORDER=1>
 <TR>
 <TH>Schedule</TH>
@@ -45,5 +47,7 @@
 {% endfor %}
 </TABLE>
 
+<!--#include virtual="/mta/ASPECT/footer.html"--> 
+<!--footer end-->
 </BODY>
 </HTML>
